--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js"></script>
     <title>Mr. Robot</title>
 </head>
 <body>
@@ -19,9 +21,9 @@
     <section class="hero-box" id="inicio">
         <div class="container">
             <div class="hero-box__photo">
-                <img src="img/mr_robot.png" alt="Mr. Robot">
+                <img src="img/mr_robot.png" alt="Mr. Robot" class="rellax" data-rellax-speed="10">
                 <div class="hero-box__logo">
-                    <img src="img/Mr._Robot_Logo.svg.png" alt="Mr. Robot">
+                    <img src="img/Mr._Robot_Logo.svg.png" class="rellax" data-rellax-speed="3" alt="Mr. Robot">
                 </div>
             </div>  
             <p class="hero-box__p">Elliot, um brilhante e altamente instável jovem engenheiro de segurança digital e hacker vigilante, se torna a figura central de um complexo jogo de dominância global quando ele e seus aliados sombrios tentam derrubar a corporação corrupta para a qual ele trabalha.</p>
